feat: fix chat
